--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,9 +13,16 @@
         {% block body %}
             <div class="container">
                 {% block content %}
+
                 {% endblock %}
             </div>
         {% endblock %}
+
         {% block javascripts %}{% endblock %}
     </body>
+    <footer>
+        {% block footer %}
+
+        {% endblock %}
+    </footer>
 </html>
