--- a/app/Resources/views/mainpage/index.html.twig
+++ b/app/Resources/views/mainpage/index.html.twig
@@ -3,9 +3,10 @@
 {% block title %}
     KARATE RZESZOW
 {% endblock %}
-{% block body %}
-    <div class="container">
-        <h1 class="text-center">{{ hello }}</h1>
+
+
+{% block content %}
+        <h1 class="text-center">Witamy na stronie karate</h1>
 
         {% if app.user %}
             <a href="{{ path('fos_user_security_logout') }}">Wyloguj się</a>
@@ -13,10 +14,50 @@
             <a href="{{ path('easyadmin') }}">Zaloguj się</a>
         {% endif %}
 
+        {#Post section#}
+        {% for post in pagination %}
+            <article class="post">
+                <header>
+                    <h1>{{ post.title }}</h1>
+                    <div class="meta-data">
+                        <div class="author">Autor <a href="#" alt="Autor postu">{{ post.author }}</a></div>
+                        <div class="create-date">Dodano {{ post.publishedDate|date('d.m.Y, H:m') }}</div>
+                    </div>
+                 </header>
 
-    </div>
+                <div class="thumbnail">
+                    <div class="meta-data">
+                        <div class="categories">
+                            Kategoria:
+                            <a href="#" alt="Nazwy kategorii przypisanych do postu">{{ post.category.name }}</a>
+                        </div>
+                    </div>
+
+                    <div class="tags">
+                        Tagi:
+
+                        {% for tag in post.tags %}
+                            <a href="#">{{ tag.name }}</a>
+                        {% endfor %}
+                    </div>
+
+                    {#<img src="" alt=""> TODO: Thumbnail upload #}
+                </div>
+                    {{ post.content|raw }}
+
+                <footer>
+                    <a href="#" class="btn-green">Czytaj całość [...]</a>
+
+                    {#<a href="{{ path('karate_post', {'slug':post.slug}) }}" class="btn-green">Czytaj całość [...]</a>#}
+                </footer>
+
+            </article>
+        {% endfor %}
+
+        {{ knp_pagination_render(pagination) }}
 
 {% endblock %}
+
 
 {% block stylesheets %}
     {{ parent() }}
