Podlinkowane taksonomie i widok pojedynczego postu

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,10 +11,17 @@
     </head>
     <body>
         {% block body %}
+
             <div class="container">
+
+                <h1 class="text-center">Witamy na stronie karate</h1>
+
+
+
                 {% block content %}
 
                 {% endblock %}
+
             </div>
         {% endblock %}
 
