--- a/app/Resources/views/mainpage/index.html.twig
+++ b/app/Resources/views/mainpage/index.html.twig
@@ -5,56 +5,64 @@
 {% endblock %}
 
 
+
 {% block content %}
-        <h1 class="text-center">Witamy na stronie karate</h1>
 
-        {% if app.user %}
-            <a href="{{ path('fos_user_security_logout') }}">Wyloguj się</a>
-        {% else %}
-            <a href="{{ path('easyadmin') }}">Zaloguj się</a>
-        {% endif %}
+    <form action="{{ path('karate_search') }}">
+        <input type="text" value="{{ searchParam is defined ? searchParam : '' }}" name="search" placeholder="Wyszukaj">
+    </form>
 
-        {#Post section#}
-        {% for post in pagination %}
-            <article class="post">
-                <header>
-                    <h1>{{ post.title }}</h1>
-                    <div class="meta-data">
-                        <div class="author">Autor <a href="#" alt="Autor postu">{{ post.author }}</a></div>
-                        <div class="create-date">Dodano {{ post.publishedDate|date('d.m.Y, H:m') }}</div>
-                    </div>
-                 </header>
+    {% if app.user %}
+        <a href="{{ path('fos_user_security_logout') }}">Wyloguj się</a>
+    {% else %}
+        <a href="{{ path('easyadmin') }}">Zaloguj się</a>
+    {% endif %}
 
-                <div class="thumbnail">
-                    <div class="meta-data">
-                        <div class="categories">
-                            Kategoria:
-                            <a href="#" alt="Nazwy kategorii przypisanych do postu">{{ post.category.name }}</a>
-                        </div>
+    {#List of posts header#}
+    {% block listTitle %}
+        <h2>{{ listTitle }}</h2>
+    {% endblock %}
+
+    {#Post section#}
+    {% for post in pagination %}
+        <article class="post">
+            <header>
+                <h1>{{ post.title }}</h1>
+                <div class="meta-data">
+                    <div class="author">Autor <a href="#" alt="Autor postu">{{ post.author }}</a></div>
+                    <div class="create-date">Dodano {{ post.publishedDate|date('d.m.Y, H:m') }}</div>
+                </div>
+             </header>
+
+            <div class="thumbnail">
+                <div class="meta-data">
+                    <div class="categories">
+                        Kategoria:
+                        <a href="{{ path('karate_category', {'slug':post.category.slug}) }}" alt="Nazwy kategorii przypisanych do postu">{{ post.category.name }}</a>
                     </div>
 
                     <div class="tags">
                         Tagi:
 
                         {% for tag in post.tags %}
-                            <a href="#">{{ tag.name }}</a>
+                            <a href="{{ path('karate_tag', {'slug':tag.slug}) }}">{{ tag.name }}</a>
                         {% endfor %}
                     </div>
-
-                    {#<img src="" alt=""> TODO: Thumbnail upload #}
                 </div>
-                    {{ post.content|raw }}
 
-                <footer>
-                    <a href="#" class="btn-green">Czytaj całość [...]</a>
+                {#<img src="" alt=""> TODO: Thumbnail upload #}
+            </div>
+                {{ post.content|raw }}
 
-                    {#<a href="{{ path('karate_post', {'slug':post.slug}) }}" class="btn-green">Czytaj całość [...]</a>#}
-                </footer>
+            <footer>
 
-            </article>
-        {% endfor %}
+                <a href="{{ path('karate_single_post', {'slug':post.slug}) }}" class="btn-green">Czytaj całość [...]</a>
+            </footer>
 
-        {{ knp_pagination_render(pagination) }}
+        </article>
+    {% endfor %}
+
+    {{ knp_pagination_render(pagination,'Pagination/pagination.html.twig') }}
 
 {% endblock %}
 
