--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,7 +15,7 @@
             <div class="container">
 
                 <h1 class="text-center">Witamy na stronie karate</h1>
-
+                {{ karate_test() }}
 
 
                 {% block content %}
