--- a/app/Resources/views/mainpage/index.html.twig
+++ b/app/Resources/views/mainpage/index.html.twig
@@ -54,10 +54,9 @@
                         {% endfor %}
                     </div>
                 </div>
-
-                {#<img src="" alt=""> TODO: Thumbnail upload #}
             </div>
-                {{ post.content|raw }}
+
+                {{ post.content|ab_shorten(400) }}
 
             <footer>
 
