--- a/app/Resources/views/Template/categoriesList.html.twig
+++ b/app/Resources/views/Template/categoriesList.html.twig
@@ -1,9 +1,16 @@
-<ul>
-{% for category in categoriesList %}
-    <li>
-        <a href="{{ path('karate_category', {'slug': category.slug}) }}">
-            {{ category.name }}
-        </a>
-    </li>
-{% endfor %}
-</ul>
+<div class="widget widget-popular-posts">
+    <h4 class="header-title-small border_animation"> Lista kategorii <span class="head-line"></span></h4>
+    <div class="categories-list-style">
+        <ul>
+            {% for category in categoriesList %}
+
+                    <a href="{{ path('karate_category', {'slug': category.slug}) }}" class="cat-list-item">
+                        <li>
+                            {{ category.name }}
+                        </li>
+                    </a>
+
+            {% endfor %}
+        </ul>
+    </div>
+</div>
