--- a/app/Resources/views/mainpage/index.html.twig
+++ b/app/Resources/views/mainpage/index.html.twig
@@ -1,76 +1,65 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-    KARATE RZESZOW
-{% endblock %}
-
-
-
 {% block content %}
 
-    <h2> Lista kategorii:</h2>
-    {{ print_categories_list() }}
-
-    {{ print_tags_cloud() }}
-
-    <form action="{{ path('karate_search') }}">
-        <input type="text" value="{{ searchParam is defined ? searchParam : '' }}" name="search" placeholder="Wyszukaj">
-    </form>
-
-    {% if app.user %}
-        <a href="{{ path('fos_user_security_logout') }}">Wyloguj się</a>
-    {% else %}
-        <a href="{{ path('easyadmin') }}">Zaloguj się</a>
-    {% endif %}
-
-    {#List of posts header#}
     {% block listTitle %}
-        <h2>{{ listTitle }}</h2>
+        <h2 class="header-title">{{ listTitle }} <span class="head-line"></span> </h2>
     {% endblock %}
 
-    {#Post section#}
+    {#POSTY#}
     {% for post in pagination %}
-        <article class="post">
-            <header>
-                <h1>{{ post.title }}</h1>
-                <div class="meta-data">
-                    <div class="author">Autor <a href="#" alt="Autor postu">{{ post.author }}</a></div>
-                    <div class="create-date">Dodano {{ post.publishedDate|date('d.m.Y, H:m') }}</div>
-                </div>
-             </header>
+        <article class="container-width">
+            <div class="news">
+                <header>
+                    <h1 class="title">{{ post.title }}</h1>
+                    <div class="meta-data">
+                        <div class="author">
+                            <span class="fa fa-user"> </span>
+                            Autor <a href="#" alt="Autor postu">{{ post.author }}</a>
 
-            <div class="thumbnail">
-                <div class="meta-data">
-                    <div class="categories">
-                        Kategoria:
-                        <a href="{{ path('karate_category', {'slug':post.category.slug}) }}" alt="Nazwy kategorii przypisanych do postu">{{ post.category.name }}</a>
+                        </div>
+                        <div class="create-date">
+                            <span class="fa fa-clock-o"> </span>
+                            Dodano: {{ post.publishedDate|date('d.m.Y, H:m') }}
+                        </div>
+
+                        <div class="categories">
+                            Kategoria:
+                            <a href="{{ path('karate_category', {'slug':post.category.slug}) }}" alt="Nazwy kategorii przypisanych do postu">{{ post.category.name }}</a>
+                        </div>
+
+                        <div class="tags">
+                            Tagi:
+
+                            {% for tag in post.tags %}
+                                <span class="tags-label label label-info ">
+                                        <a href="{{ path('karate_tag', {'slug':tag.slug}) }}">{{ tag.name }} </a>
+                                    </span>
+                            {% endfor %}
+                        </div>
                     </div>
+                 </header>
 
-                    <div class="tags">
-                        Tagi:
 
-                        {% for tag in post.tags %}
-                            <a href="{{ path('karate_tag', {'slug':tag.slug}) }}">{{ tag.name }}</a>
-                        {% endfor %}
-                    </div>
+
+
+
+                <p>
+                    {{ post.content|ab_shorten(600) }}
+                </p>
+
+
+                <div class="news-link news-link-forward">
+                    <a href="{{ path('karate_single_post', {'slug':post.slug}) }}" class="btn-green"> Czytaj całość <span class="fa fa-book" aria-hidden="true"></span></a>
                 </div>
+
+                <div class="clear"></div>
+
             </div>
-
-                {{ post.content|ab_shorten(400) }}
-
-            <footer>
-
-                <a href="{{ path('karate_single_post', {'slug':post.slug}) }}" class="btn-green">Czytaj całość [...]</a>
-            </footer>
-
         </article>
     {% endfor %}
 
     {{ knp_pagination_render(pagination,'Pagination/pagination.html.twig') }}
-
 {% endblock %}
 
 
-{% block stylesheets %}
-    {{ parent() }}
-{% endblock %}
