Nawigacja gotowa - bez smarfonów

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -43,22 +43,22 @@
     <div class="baner"></div>
 
     {% block navigation_block %}
-        <nav class="nav greedy">
+        <nav class="nawigacja greedy">
             <ul class="links">
                 <li class ="active"><a href="{{ path('karate_posts_index') }}">Strona początkowa</a></li>
                 <li><a href="#">Instruktorzy</a></li>
                 <li><a href="#">Regulamin</a></li>
-                <li class="dropdown">
+                <li class="drp-down">
                     <a href="#" class="dropbtn">Rozkład treningów</a>
-                    <div class="dropdown-content">
+                    <div class="drp-down-content">
                         <a href="#">treningi Rzeszów</a>
                         <a href="#">treningi Hyżne</a>
                     </div>
                 </li>
                 <li><a href="#">Wymagania egzaminacyjne</a></li>
-                <li class="dropdown">
+                <li class="drp-down">
                     <a href="#" class="dropbtn">Karate Kyokushin</a>
-                    <div class="dropdown-content">
+                    <div class="drp-down-content">
                         <a href="#">Historia</a>
                         <a href="#">Przysięga</a>
                         <a href="#">Kata</a>
@@ -69,9 +69,9 @@
                     </div>
                 </li>
                 <li><a href="#">Galeria</a></li>
-                <li class="dropdown">
+                <li class="drp-down">
                     <a href="#" class="dropbtn">Kanał YouTube</a>
-                    <div class="dropdown-content">
+                    <div class="drp-down-content">
                         <a href="#" class="special">Linki</a>
                     </div>
                 </li>
