--- a/app/Resources/views/mainpage/index.html.twig
+++ b/app/Resources/views/mainpage/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
     {% block listTitle %}
-        <h2 class="header-title">{{ listTitle }} <span class="head-line"></span> </h2>
+        <h2 class="header-title border_animation">{{ listTitle }} <span class="head-line"></span> </h2>
     {% endblock %}
 
     {#POSTY#}
