--- a/app/Resources/views/Subpages/instructors.html.twig
+++ b/app/Resources/views/Subpages/instructors.html.twig
@@ -1,11 +1,15 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    {{ headerTitle }}
+{% endblock %}
+
 {% block content %}
-    <div class="header-title">{{ headerTitle }} <span class="head-line"></span></div>
+    <div class="header-title border_animation">{{ headerTitle }} <span class="head-line"></span></div>
 
     {% for instructor in instructors %}
         <div class="col-xs-12 col-md-6 instructor">
-            <img class="img-responsive rounded-image" src="{{ asset('images/instructors/'~ instructor.avatar) }}" alt="Joanna Zachara">
+            <img class="img-responsive rounded-image" src="{{ asset('images/instructors/'~ instructor.avatar) }}" alt="{{ instructor.imie }}&nbsp;{{ instructor.nazwisko }}">
         <div class="text-centered">
             {{ instructor.tytul }} <strong>{{ instructor.imie }}&nbsp;{{ instructor.nazwisko }}</strong> <br/>
             Stopień {{ instructor.stopien }}
