Pre sending into server

--- a/app/Resources/views/mainpage/index.html.twig
+++ b/app/Resources/views/mainpage/index.html.twig
@@ -40,12 +40,8 @@
                     </div>
                  </header>
 
-
-
-
-
                 <p>
-                    {{ post.content|ab_shorten(600) }}
+                    {{ post.content| ab_shorten(400) |raw  }}
                 </p>
 
 
